Jayakumar/Nimesh #149 Fix spacing between paragraphs

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -48,11 +48,12 @@
 
     p {
       text-align: left;
-      margin: 10px 0;
+      margin: 20px 0;
     }
 
     p:lang(ur) {
       text-align: right;
+      margin: 10px 0;
     }
 
     ul {
@@ -72,6 +73,16 @@
   .paragraph-with-quote-block {
     clear: both;
     display: table;
+
+    .paragraph-block {
+      p {
+        margin: 0px;
+      }
+
+      p:lang(ur) {
+        margin: 10px;
+      }
+    }
     .quote-align-right {
       float: right;
       padding-left: 30px;
@@ -108,7 +119,7 @@
         font-family: 'Amiri', serif;
         padding-right: 0px;
         margin-right: 0px;
-        margin-top: 20px;
+        margin: 10px 0px;
         width: 84%;
         .paragraph-holder {
           width: 100%;
@@ -134,7 +145,7 @@
       .rich-text:lang(ur) {
         width: 93%;
         margin-right: 30px;
-        margin-top: 20px;
+        margin: 20px 0px;
       }
     }
   }
